small edits to paragraph about the gene tree embedding table

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -606,7 +606,9 @@ These variables,
 and the gene tree embedding table, include all relevant parameters
 for the derivations below. 
 
-To better understand the relationship between the MS-SMC' and the gene tree embedding table, consider edge 7. We can easily isolate the intervals specific to edge 7 by querying the "branches" column of the table and extracting the rows where this column contains our focal edge. The number of rows we extract is equal to the number of intervals in the edge ($I_b$). If we retain the relative order of the rows and re-index them from $0$ to $I_b-1$, the information in the columns (e.g. $n_i$, $a_i$) can be used in the equations presented below. Altogether, the gene tree embedding table is simply a set containing all unique intervals (and their properties) over all edges in the genealogy, and it maps those intervals to the genealogy edges to which they are belong. This allows us to easily query relevant intervals for any edge of the genealogical tree.
+To better understand the relationship between the MS-SMC' and the gene tree embedding table, let us consider edge 7 as an example. For this edge, we are interested in defining intervals where coalescent rate parameters change. To do so, we must identify times at which there are relevant coalescent events between other lineages in the same population, or at which there are relevant species merging events. This involves examining the genealogical tree as it is embedded within the species tree. With the gene tree embedding table, we can easily isolate the intervals specific to edge 7 by querying the "branches" column of the table and extracting the rows where this column contains our focal edge (for edge 7, these are rows 1, 6, 7, and 8). The number of rows we extract (in this case, 4) is equal to the number of intervals in the edge ($I_b$). If we retain the relative order of the rows and re-index them from $0$ to $I_b-1$, the information in the columns (e.g. $n_i$, $a_i$) is easily adapted for use in the equations presented below. 
+
+To summarize, the gene tree embedding table is simply a set containing all unique intervals (and their properties) over all edges in the genealogy, and it maps those intervals to the genealogy edges to which they belong. This allows us to easily query relevant intervals for any edge of the genealogical tree. For extracting relationships among branches (e.g. parent, sibling, as required for the topology cahnge equations), we can reference a separate table specific to the structure of the genealogical tree only (see Appendix, Table 2).
 % , and are also summarized in the Appendix.
 
 %\hl{needs updates to figure out how table can align with existing variables names.
